--- a/.tbstore/configuration.yml
+++ b/.tbstore/configuration.yml
@@ -7,6 +7,7 @@ tags:
   - google analytics
   - statistics
   - tracking
+  - piwikanalyticsjs
 description_short: The Piwik module allows you to install Piwik analytics on your site to track users.
 description: description.md
 images:
